feat: UI redesign with Stripe/Linear style and i18n improvements
- Redesign sidebar and header with minimalist style
- Add card-based layout for routes and services pages
- Implement route pagination with customizable page size
- Add collapsible sidebar with toggle button
- Add warning alerts for services without available instances
- Complete i18n support for all UI elements
- Add plugin/predicate tooltips with detailed descriptions
- Rename "Filters" to "Plugins" in route management
- Add route validation utilities

🤖 Generated with [Qoder](https://qoder.com)